@@ -1,3 +1,9 @@
+2011-06-06  Asher Langton  <langton2@llnl.gov>
+
+	PR fortran/49268
+	* trans-decl.c (gfc_trans_deferred_vars): Treat assumed-size Cray
+	pointees as AS_EXPLICIT.
+
 2011-06-02  Steven G. Kargl  <kargl@gcc.gnu.org>
 
 	PR fortran/49265
